# Advanced-CPlusPlus

./: README.md
Lesson01/: readme.md
Lesson01/Activity1/: CMakeLists.txt
Lesson01/Exercise10/: CMakeLists.txt
Lesson01/Exercise2/: .project
Lesson01/ex2/: .cproject  .gitignore  README.md
Lesson01/ex3/: CMakeLists.txt
Lesson01/ex6/: CMakeLists.txt
Lesson01/ex8/: sample.cpp
Lesson02/: CMakeLists.txt  readme.md
Lesson02/ex5/: exercise5.cpp
Lesson02/ex7/: Fraction.cpp  Fraction.hpp
Lesson02/ex8/: exercise8.cpp
Lesson02/ex9/: Stack.hpp  exercise9.cpp
Lesson02A/: CMakeLists.txt  readme.md
Lesson02A/Activity1/: CMakeLists.txt  matrix3d.cpp  point3d.cpp  point3d.hpp
Lesson02A/Activity1/answers/: CMakeLists.txt  main.cpp  matrix3d.hpp  point3d.hpp
Lesson02A/Activity1/tests/: CMakeLists.txt  point3dTests.cpp
Lesson02A/ex1/: exercise1.cpp
Lesson02A/ex2/: exercise2.cpp
Lesson02A/ex3/: exercise3.cpp
Lesson02A/ex4/: exercise4.cpp
Lesson02A/ex7/: Fraction.cpp
Lesson02A/ex7/answers/: Fraction.hpp
Lesson02B/: CMakeLists.txt
Lesson02B/Activity1/: main.cpp
Lesson02B/Activity1/answers/: CMakeLists.txt
Lesson02B/Activity1/tests/: CMakeLists.txt  containsTests.cpp
Lesson02B/ex1/: exercise1.cpp
Lesson02B/ex4/: exercise4.cpp
Lesson02B/ex4/tests/: StackTests.cpp
Lesson03/Activity1/: CMakeLists.txt  main.cpp  matrix3d.hpp  point3d.cpp  point3d.hpp  serialise3d.hpp
Lesson03/Activity1/answers/: main.cpp  matrix3d.cpp  matrix3d.hpp  point3d.cpp  point3d.hpp  serialise3d.hpp
Lesson03/Activity1/answers/tests/: CMakeLists.txt  matrix3dTests.cpp  point3dTests.cpp  serialisationTests.cpp
Lesson03/Activity1/tests/: CMakeLists.txt  matrix3dTests.cpp  serialisationTests.cpp
Lesson03/Activity2/: date.cpp
Lesson03/Activity2/tests/: CMakeLists.txt
Lesson03/ex1/: Fraction.cpp  Fraction.hpp  Stack.hpp
Lesson03/ex2/: exceptions.cpp
Lesson03/ex3/: exercise3.cpp  monitor.h
Lesson03/ex4/: sensors.hpp
Lesson03/ex5/: exercise5.cpp
Lesson03/ex6/: exercise6.cpp
Lesson04/: CMakeLists.txt
Lesson04/Activity1/: CMakeLists.txt  main.cpp
Lesson04/Activity1/answers/: CMakeLists.txt
Lesson04/Activity1/answers/tests/: delegateTests.cpp
Lesson04/Activity1/tests/: delegateTests.cpp
Lesson04/ex1/: dessert.hpp  exercise1.cpp  recipe.hpp
Lesson04/ex2/: exercise2.cpp
Lesson04/ex3/: exercise3.cpp
Lesson04/ex4/: exercise4.cpp
Lesson05/Activity/: Person.hpp  PersonGenerator.cpp  Persons.cpp
Lesson05/ex1/: chapter5.cpp
Lesson05/ex3/: chapter5.cpp
Lesson05/ex4/: chapter5.cpp
Lesson05/ex5/: chapter5.cpp
Lesson06/: Exercise 1.cpp  Exercise 2.cpp  Exercise 3.cpp  Exercise 4.cpp  Exercise 8.cpp  Exercise 9.cpp
Lesson07/Activity1/: CurrencyConversion.txt  CurrencyExtraColumn.txt  CurrencyWrongDelimiter.txt  Main.cpp  ParseFileTestCases.cpp  ParseFiles.cpp  RecordFile.txt  Stack.h  Test.make  Util.cpp  correctHeaderFile  parseMissingRecord.conf
Lesson07/Exercise1/: AssertSample.cpp
Lesson07/Exercise2/: PersonLibrary.h  PersonLibrary_ver1.h
Lesson07/Exercise4/: TestCases.cpp
Lesson07/Exercise5/: Misc.cpp  Misc.h  MockMisc.h  RunApp.cpp  TestApp.cpp  TestApp.make
Lesson08/activity1/: Speller1.cpp  Speller2.cpp  Speller3.cpp
Lesson08/ex10/: Snippet6.cpp
Lesson08/ex11/: Snippet7.cpp
Lesson08/ex13/: Snippet10.cpp  Timer.h
Lesson08/ex14/: Snippet12.cpp
Lesson08/ex16/: Snippet14.cpp  Snippet16.cpp  Snippet17.cpp  Snippet18.cpp  Snippet20.cpp  Snippet21.cpp  Snippet22.cpp  SnippetWC.cpp  SnippetWC2.cpp  SnippetWC3.cpp  SnippetWC5.cpp
Lesson08/ex4/: Snippet2.cpp
Lesson08/ex9/: Snippet5.cpp
Lesson1/: readme.md
Lesson1/Exercise02/: CMakeLists.txt
Lesson2A/: CMakeLists.txt  readme.md
Lesson2A/Activity01/: CMakeLists.txt  main.cpp
Lesson2A/Activity01/answers/: point3d.cpp
Lesson2A/Activity01/answers/tests/: CMakeLists.txt  point3dTests.cpp
Lesson2A/Exercise01/: Exercise1.cpp
Lesson2A/Exercise03/: Exercise3.cpp
Lesson2A/Exercise06/: Exercise6.cpp
Lesson2A/Exercise07/: Exercise7.cpp
Lesson2A/Exercise07/answers/: Fraction.cpp
Lesson2A/Exercise07/tests/: CMakeLists.txt  FractionTests.cpp
Lesson2B/: CMakeLists.txt
Lesson2B/Activity01/: contains.hpp
Lesson2B/Activity1/: main.cpp
Lesson2B/Activity1/answers/: contains.hpp
Lesson2B/Activity1/answers/tests/: containsTests.cpp
Lesson2B/Exercise02/: exercise2.cpp
Lesson2B/Exercise03/: Exercise3.cpp
Lesson2B/Exercise04/tests/: CMakeLists.txt
Lesson2B/ex4/: Stack.hpp
Lesson2B/ex4/tests/: CMakeLists.txt
Lesson3/: CMakeLists.txt  readme.md
Lesson3/Activity01/answers/: point3d.hpp
Lesson3/Activity01/answers/tests/: point3dTests.cpp
Lesson3/Activity01/tests/: CMakeLists.txt  point3dTests.cpp
Lesson3/Activity02/: CMakeLists.txt  date.hpp
Lesson3/Activity1/: matrix3d.cpp
Lesson3/Activity1/answers/tests/: matrix3dTests.cpp
Lesson3/Activity1/tests/: matrix3dTests.cpp
Lesson3/Activity2/answers/: date.hpp
Lesson3/Activity2/tests/: dateTests.cpp
Lesson3/Exercise01/answers/: Fraction.cpp  Stack.hpp
Lesson3/Exercise01/tests/: StackTests.cpp
Lesson3/Exercise03/answers/: Exercise3.cpp
Lesson3/ex3/: monitor.cpp
Lesson3/ex4/: exercise4.cpp
Lesson4/: CMakeLists.txt
Lesson4/Activity01/answers/: main.cpp
Lesson4/Activity01/answers/tests/: CMakeLists.txt
Lesson4/Activity1/: delegate.hpp
Lesson4/Activity1/answers/: delegate.hpp
Lesson4/Exercise01/: kitchen.hpp
Lesson4/ex1/: kitchen.cpp
Lesson5/: readme.md
Lesson5/Activity/: Common.hpp  Person.cpp
Lesson5/Activity01/: Simulator.cpp  Watchman.cpp
Lesson5/Exercise02/: Exercise2.cpp
Lesson6/Activity/: Person.cpp  PersonGenerator.hpp  Simulator.cpp  Watchman.hpp
Lesson6/Activity01/: Persons.hpp
Lesson6/Exercise02/: Exercise02.cpp
Lesson6/Exercise05/: Exercise5.cpp
Lesson6/Exercise06/: Exercise6.cpp
Lesson6/Exercise07/: Exercise7.cpp
Lesson7/Activity01/: CommonHeader.h  IdentifyTestCases.txt  RecordExtraColumn.txt  RecordWrongDelimiter.txt  build.sh  noHeaderFile  parse.conf  parseMissingCurrency.conf
Lesson7/Exercise02/: PersonLibrary_ver2.h  (+1 more)
Lesson8/: readme.md
(+62 files in other folders)
